ros-system-daemon (0.1.0) precise; urgency=low

  * Overhaul

 -- Mike Purvis <mpurvis@clearpathrobotics.com>  Mon, 28 Jul 2014 00:00:00 -0500

ros-system-daemon (0.0.6) precise; urgency=low

  * Fixed ENVVARS

 -- I Heart Engineering <code@iheartengineering.com>  Wed, 13 Feb 2013 10:58:48 -0500

ros-system-daemon (0.0.5) precise; urgency=low

  * Fixing d-bus issues
  * aFixed typoe

 -- I Heart Engineering <code@iheartengineering.com>  Wed, 06 Feb 2013 01:58:09 -0500

ros-system-daemon (0.0.4) precise; urgency=low

  * Fixed bug with ROS_IP by uncommenting working code. Upstart logging improved

 -- I Heart Engineering <code@iheartengineering.com>  Tue, 05 Feb 2013 21:57:47 -0500

ros-system-daemon (0.0.3) precise; urgency=low

  * Fixed PID detect & user detect
  * Fixed upstart script issues

 -- I Heart Engineering <code@iheartengineering.com>  Fri, 01 Feb 2013 18:26:17 -0500

ros-system-daemon (0.0.3~1.gbpa5d4b7) UNRELEASED; urgency=low

  ** SNAPSHOT build @a5d4b77279095564067cfa83537add640c6009a6 **

  [ lucid ]
  * UNRELEASED

  [ I Heart Engineering ]

 -- I Heart Engineering <code@iheartengineering.com>  Fri, 01 Feb 2013 06:13:33 -0500

ros-system-daemon (0.0.2) precise; urgency=low

  * Fixing changelog

 -- I Heart Engineering <code@iheartengineering.com>  Fri, 01 Feb 2013 06:11:44 -0500